boceto con diseño

--- a/index.html
+++ b/index.html
@@ -38,5 +38,19 @@
 		<label for="btn-menu">✖️</label>
 	</div>
 </div>
+<div id="contenido">
+	<div id="titulo">
+		<h3>Experiencia de Usuario</h3>
+	</div>
+	<br>
+	<div id="parrafo">
+		<p>La experiencia de usuario, también llamada user experience o simplemente UX,
+			se define como el conjunto de factores y elementos relacionados con el proceso
+			de interacción de un usuario respecto a un producto o servicio.
+		</p>
+	</div>
+	<br>
+	<img src="img/imagen1.jpg" id="imgp" alt="">
+</div>
 </body>
 </html>
